# Car_plate_detection

./: .gitignore  README.md  config.py  main_detect.py  pyproject.toml
models/: common.py  plate.yaml  yolo.py
models/yolov5/models/: experimental.py  tf.py
models/yolov5/utils/: augmentations.py  autoanchor.py  datasets.py  general.py  plots.py  torch_utils.py
src/: app_logger.py  class_dataset.py  class_ocr.py  class_yolo_detector.py  utils.py
