[tool.poetry]
name = "CarPlates"
version = "0.1.0"
description = ""
authors = ["Oleg <pyataev@ieg.net.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"
yolov5 = "^7.0.7"
easyocr = "^1.6.2"
scikit-learn = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
